--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="container mt-4">
-    <h2 class="text-center">Student Management System</h2>
+    <h2 class="text-center">Student Management System...</h2>
 
     <div class="text-end mb-3">
         <a th:href="@{/new}" class="btn btn-primary">Add Student</a>
